--- a/about.html
+++ b/about.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>About Staffona — Egypt HR Outsourcing Specialists, Alexandria</title>
 <meta name="description" content="Staffona is an Alexandria-based HR outsourcing and recruitment consultancy helping foreign and Egyptian companies build compliant teams in Egypt. Meet our mission and values.">
-<link rel="canonical" href="https://www.staffona.com/about.html">
+<link rel="canonical" href="https://www.staffona.com/about">
 <link rel="icon" type="image/png" href="Favicon.png">
 <meta property="og:title" content="About Staffona — Egypt HR Specialists"><meta property="og:description" content="Alexandria-based HR outsourcing specialists. Our mission, values, and approach to HR in Egypt."><meta property="og:image" content="https://www.staffona.com/Logo.png">
 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -176,7 +176,7 @@
 </footer>
 <div class="cookie" id="cookieBanner"><p>We use cookies to improve your experience. <a href="privacy.html">Privacy Policy</a></p><div class="cb-btns"><button class="btn btn-gold btn-sm" id="cookieAccept">Accept</button><button style="background:transparent;border:1px solid rgba(255,255,255,.2);color:rgba(255,255,255,.4);border-radius:var(--r);padding:7px 14px;font-size:13px;cursor:pointer" id="cookieDecline">Decline</button></div></div>
 <button class="btt" id="btt" aria-label="Back to top"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><line x1="12" y1="19" x2="12" y2="5"/><polyline points="5,12 12,5 19,12"/></svg></button>
-<script async src="https://assets.calendly.com/assets/external/widget.css"></script>
+<link rel="stylesheet" href="https://assets.calendly.com/assets/external/widget.css">
 <script async src="https://assets.calendly.com/assets/external/widget.js"></script>
 <script src="shared.js"></script>
 </body></html>
