--- a/hr-outsourcing.html
+++ b/hr-outsourcing.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>HR Outsourcing &amp; Managed Employment Egypt — Hire Without a Local Entity | Staffona</title>
 <meta name="description" content="Staffona's managed employment service lets foreign companies hire Egyptian staff legally without registering a local company. Full EOR, payroll, and compliance included.">
-<link rel="canonical" href="https://www.staffona.com/hr-outsourcing.html">
+<link rel="canonical" href="https://www.staffona.com/hr-outsourcing">
 <link rel="icon" type="image/png" href="Favicon.png">
 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700;800&family=DM+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
