--- a/index.html
+++ b/index.html
@@ -4,15 +4,17 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>HR Outsourcing &amp; Recruitment Consultancy in Egypt | Staffona</title>
-<meta name="description" content="Staffona is Egypt's trusted HR outsourcing and recruitment consultancy, based in Alexandria. Payroll, compliance, recruitment — fully managed.">
-<link rel="canonical" href="https://www.staffona.com/">
+<meta name="description" content="Staffona is Egypt's trusted HR outsourcing and recruitment consultancy. Payroll, compliance, and recruitment — fully managed for any business hiring in Egypt.">
+<link rel="canonical" href="https://staffona.com/">
 <link rel="icon" type="image/png" href="/Favicon.png">
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://www.staffona.com/">
+<meta property="og:url" content="https://staffona.com/">
 <meta property="og:title" content="HR Outsourcing &amp; Recruitment in Egypt | Staffona">
-<meta property="og:description" content="Hire in Egypt legally. Staffona manages payroll, HR compliance, and recruitment. Based in Alexandria.">
-<meta property="og:image" content="https://www.staffona.com/Logo.png">
-<script type="application/ld+json">{"@context":"https://schema.org","@graph":[{"@type":"Organization","@id":"https://www.staffona.com/#org","name":"Staffona","url":"https://www.staffona.com","email":"info@staffona.com","address":{"@type":"PostalAddress","streetAddress":"El-Horreya Street, Mostafa Kamel","addressLocality":"Alexandria","addressCountry":"EG"},"areaServed":["EG","AE","SA","GB","US","QA"],"sameAs":["https://www.linkedin.com/company/staffona"]},{"@type":"FAQPage","mainEntity":[{"@type":"Question","name":"Can a foreign company hire in Egypt without a local entity?","acceptedAnswer":{"@type":"Answer","text":"Yes — through Staffona managed employment, foreign companies legally employ Egyptian staff with full payroll and compliance managed, no local entity needed."}},{"@type":"Question","name":"How fast is onboarding through Staffona?","acceptedAnswer":{"@type":"Answer","text":"2 to 5 business days from agreement signing to the employee's first active day, including contract and social insurance registration."}},{"@type":"Question","name":"Where is Staffona located?","acceptedAnswer":{"@type":"Answer","text":"El-Horreya Street, Mostafa Kamel, Alexandria, Egypt. Serving Egypt, GCC, UK, USA, and Europe."}}]}]}</script>
+<meta property="og:description" content="Hire in Egypt legally. Staffona manages payroll, HR compliance, and recruitment for companies across Egypt and internationally.">
+<meta property="og:image" content="https://staffona.com/og-banner.png">
+<meta property="og:image:width" content="1200">
+<meta property="og:image:height" content="630">
+<script type="application/ld+json">{"@context":"https://schema.org","@graph":[{"@type":"Organization","@id":"https://staffona.com/#org","name":"Staffona","url":"https://staffona.com","email":"info@staffona.com","address":{"@type":"PostalAddress","streetAddress":"El-Horreya Street, Mostafa Kamel","addressLocality":"Alexandria","addressCountry":"EG"},"areaServed":["EG","AE","SA","GB","US","QA"],"sameAs":["https://www.linkedin.com/company/staffona"]},{"@type":"LocalBusiness","@id":"https://staffona.com/#local","name":"Staffona","description":"Egypt's trusted HR outsourcing and recruitment consultancy. Payroll, compliance, and talent acquisition — fully managed.","url":"https://staffona.com","email":"info@staffona.com","address":{"@type":"PostalAddress","streetAddress":"El-Horreya Street, Mostafa Kamel","addressLocality":"Alexandria","addressRegion":"Alexandria Governorate","postalCode":"21523","addressCountry":"EG"},"geo":{"@type":"GeoCoordinates","latitude":"31.2001","longitude":"29.9187"},"areaServed":[{"@type":"Country","name":"Egypt"},{"@type":"Country","name":"United Arab Emirates"},{"@type":"Country","name":"Saudi Arabia"},{"@type":"Country","name":"United Kingdom"},{"@type":"Country","name":"United States"},{"@type":"Country","name":"Qatar"}],"serviceType":["HR Outsourcing","Payroll Management","Recruitment Consultancy","HR Compliance Advisory","Managed Employment"],"openingHoursSpecification":[{"@type":"OpeningHoursSpecification","dayOfWeek":["Sunday","Monday","Tuesday","Wednesday","Thursday"],"opens":"09:00","closes":"17:00"}],"sameAs":["https://www.linkedin.com/company/staffona"]},{"@type":"FAQPage","mainEntity":[{"@type":"Question","name":"Can a foreign company hire in Egypt without a local entity?","acceptedAnswer":{"@type":"Answer","text":"Yes — through Staffona managed employment, foreign companies legally employ Egyptian staff with full payroll and compliance managed, no local entity needed."}},{"@type":"Question","name":"How fast is onboarding through Staffona?","acceptedAnswer":{"@type":"Answer","text":"2 to 5 business days from agreement signing to the employee's first active day, including contract and social insurance registration."}},{"@type":"Question","name":"Where is Staffona located?","acceptedAnswer":{"@type":"Answer","text":"El-Horreya Street, Mostafa Kamel, Alexandria, Egypt. Serving Egypt, GCC, UK, USA, and Europe."}}]}]}</script>
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700;800&family=DM+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -273,7 +275,7 @@
       <div>
         <div class="pill"><div class="pill-dot"></div><span>HR Outsourcing &amp; Recruitment — Egypt</span></div>
         <h1 class="h1">Build Your Team<br>in <span class="g">Egypt.</span><br><span class="ul">Without the Complexity.</span></h1>
-        <p class="hdesc">Staffona is Egypt's trusted HR outsourcing and recruitment consultancy, based in Alexandria. We manage payroll, labor law compliance, and talent acquisition — so your business operates in Egypt with zero administrative burden.</p>
+        <p class="hdesc">Staffona is Egypt's trusted HR outsourcing and recruitment consultancy. We manage payroll, labor law compliance, and talent acquisition — so your business operates in Egypt with zero administrative burden.</p>
         <div class="hctas">
           <button class="btn btn-gold btn-lg" data-cal>Book Free Consultation <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><line x1="5" y1="12" x2="19" y2="12"/><polyline points="12,5 19,12 12,19"/></svg></button>
           <a href="/services.html" class="btn btn-ghost btn-lg">Explore Services</a>
@@ -286,7 +288,7 @@
         </div>
       </div>
       <div class="hcard rv d2">
-        <div class="hc-top"><div style="font-size:10.5px;font-weight:700;color:var(--gold);letter-spacing:.1em;text-transform:uppercase">Service Overview</div><div class="hc-live"><div class="hc-live-dot"></div>Alexandria, Egypt</div></div>
+        <div class="hc-top"><div style="font-size:10.5px;font-weight:700;color:var(--gold);letter-spacing:.1em;text-transform:uppercase">Service Overview</div><div class="hc-live"><div class="hc-live-dot"></div>Egypt</div></div>
         <div class="hc-stats">
           <div class="hcs"><div class="hcs-n">48<em>hrs</em></div><div class="hcs-l">Avg. Onboarding</div></div>
           <div class="hcs"><div class="hcs-n">$0</div><div class="hcs-l">Entity Setup</div></div>
@@ -315,7 +317,7 @@
   <div class="titems">
     <div class="titem">🏛️ Egyptian Tax Authority</div>
     <div class="titem">⚖️ Ministry of Manpower</div>
-    <div class="titem">🛡️ Social Insurance Authority</div>
+    <div class="titem">🛡️ NOSI — Social Insurance</div>
     <div class="titem">📋 Labor Law No. 12/2003</div>
     <div class="titem">🏦 Central Bank of Egypt</div>
   </div>
@@ -341,7 +343,7 @@
         <ul class="sf"><li>Tech, support, finance, operations</li><li>Salary benchmarking</li><li>Executive search</li><li>90-day replacement guarantee</li></ul>
         <div class="slk">Explore Recruitment <svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><line x1="5" y1="12" x2="19" y2="12"/><polyline points="12,5 19,12 12,19"/></svg></div>
       </a>
-      <a href="/hr-outsourcing.html" class="svcc rv d2">
+      <a href="/compliance.html" class="svcc rv d2">
         <div class="snum">03</div>
         <div class="sic"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M12 2L4 6v6c0 5.25 3.5 10.15 8 11.35C16.5 22.15 20 17.25 20 12V6L12 2z"/></svg></div>
         <h3 class="st">HR Compliance Advisory</h3>
@@ -477,7 +479,7 @@
       <div class="rv-l">
         <div class="lbl lbl-lt">Get Started</div>
         <h2 class="ctitle">Ready to Simplify<br>HR in <span>Egypt?</span></h2>
-        <p class="cdesc">First consultation is always free. Our Alexandria-based specialists reply within 2 business hours.</p>
+        <p class="cdesc">First consultation is always free. Our Egypt-based HR specialists reply within 2 business hours.</p>
         <a href="#" class="copt" data-cal>
           <div class="copic"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><rect x="3" y="4" width="18" height="18" rx="2"/><line x1="16" y1="2" x2="16" y2="6"/><line x1="8" y1="2" x2="8" y2="6"/><line x1="3" y1="10" x2="21" y2="10"/></svg></div>
           <div><div class="copt-t">Schedule a Video Call</div><div class="copt-d">30-min Calendly — any timezone</div></div>
@@ -485,6 +487,10 @@
         <a href="mailto:info@staffona.com" class="copt">
           <div class="copic"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"/><polyline points="22,6 12,13 2,6"/></svg></div>
           <div><div class="copt-t">Email Us</div><div class="copt-d">info@staffona.com — reply within 2 hrs</div></div>
+        </a>
+        <a href="https://wa.me/YOURNUMBER?text=Hi%20Staffona%2C%20I%27d%20like%20to%20learn%20about%20your%20HR%20services." target="_blank" rel="noopener" class="copt" id="waLink">
+          <div class="copic" style="background:rgba(37,211,102,.15);border-color:rgba(37,211,102,.3)"><svg viewBox="0 0 24 24" fill="currentColor" style="color:#25D366"><path d="M17.472 14.382c-.297-.149-1.758-.867-2.03-.967-.273-.099-.471-.148-.67.15-.197.297-.767.966-.94 1.164-.173.199-.347.223-.644.075-.297-.15-1.255-.463-2.39-1.475-.883-.788-1.48-1.761-1.653-2.059-.173-.297-.018-.458.13-.606.134-.133.298-.347.446-.52.149-.174.198-.298.298-.497.099-.198.05-.371-.025-.52-.075-.149-.669-1.612-.916-2.207-.242-.579-.487-.5-.669-.51-.173-.008-.371-.01-.57-.01-.198 0-.52.074-.792.372-.272.297-1.04 1.016-1.04 2.479 0 1.462 1.065 2.875 1.213 3.074.149.198 2.096 3.2 5.077 4.487.709.306 1.262.489 1.694.625.712.227 1.36.195 1.871.118.571-.085 1.758-.719 2.006-1.413.248-.694.248-1.289.173-1.413-.074-.124-.272-.198-.57-.347z"/><path d="M11.998 0C5.374 0 0 5.373 0 11.998c0 2.118.554 4.104 1.523 5.826L.057 23.998l6.304-1.654A11.954 11.954 0 0011.998 24c6.625 0 12-5.374 12-12S18.623 0 11.998 0zm0 21.818a9.818 9.818 0 01-5.011-1.374l-.36-.213-3.733.979 1-3.635-.234-.374a9.817 9.817 0 01-1.504-5.201c0-5.426 4.416-9.842 9.842-9.842s9.842 4.416 9.842 9.842-4.416 9.842-9.842 9.842z"/></svg></div>
+          <div><div class="copt-t">WhatsApp</div><div class="copt-d">Message us — quick reply</div></div>
         </a>
         <a href="https://www.linkedin.com/company/staffona" target="_blank" rel="noopener" class="copt">
           <div class="copic"><svg viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2"><path d="M16 8a6 6 0 0 1 6 6v7h-4v-7a2 2 0 0 0-4 0v7h-4v-7a6 6 0 0 1 6-6z"/><rect x="2" y="9" width="4" height="12"/><circle cx="4" cy="4" r="2"/></svg></div>
