--- a/payroll-egypt.html
+++ b/payroll-egypt.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>Payroll Outsourcing Egypt — Tax, NOSI, Salary Processing | Staffona</title>
 <meta name="description" content="Full payroll outsourcing in Egypt. Monthly processing, income tax, social insurance (NOSI), Form 4 returns, and audit-ready payslips. Based in Alexandria.">
-<link rel="canonical" href="https://www.staffona.com/payroll-egypt.html">
+<link rel="canonical" href="https://www.staffona.com/payroll-egypt">
 <link rel="icon" type="image/png" href="Favicon.png">
 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700;800&family=DM+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
