--- a/services.html
+++ b/services.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>HR Outsourcing Services in Egypt — Payroll, Recruitment, Compliance | Staffona</title>
 <meta name="description" content="Complete HR outsourcing services in Egypt: payroll management, recruitment consultancy, managed employment (EOR), and HR compliance advisory. Based in Alexandria.">
-<link rel="canonical" href="https://www.staffona.com/services.html">
+<link rel="canonical" href="https://www.staffona.com/services">
 <link rel="icon" type="image/png" href="Favicon.png">
 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700;800&family=DM+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
