--- a/compliance.html
+++ b/compliance.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>HR Compliance Advisory Egypt — Labor Law, Contracts, Audits | Staffona</title>
 <meta name="description" content="Egyptian HR compliance advisory — legally-vetted Arabic employment contracts, labor law audits, termination advisory, and HR policy development. Stay fully compliant.">
-<link rel="canonical" href="https://www.staffona.com/compliance.html">
+<link rel="canonical" href="https://www.staffona.com/compliance">
 <link rel="icon" type="image/png" href="Favicon.png">
 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700;800&family=DM+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
