--- a/laws.html
+++ b/laws.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1">
 <title>Egyptian Labor Laws &amp; HR Guides | Staffona</title>
 <meta name="description" content="Plain-language guides to Egyptian labor law, social insurance, income tax, and HR compliance. Free reference for employers and HR professionals.">
-<link rel="canonical" href="https://www.staffona.com/laws.html"><link rel="icon" type="image/png" href="Favicon.png">
+<link rel="canonical" href="https://www.staffona.com/laws"><link rel="icon" type="image/png" href="Favicon.png">
 <script async src="https://www.googletagmanager.com/gtag/js?id=G-BG3DEQLHJF"></script>
 <script>window.dataLayer=window.dataLayer||[];function gtag(){dataLayer.push(arguments);}gtag('js',new Date());gtag('config','G-BG3DEQLHJF');</script>
 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
