--- a/privacy.html
+++ b/privacy.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>Privacy Policy | Staffona</title>
 <meta name="description" content="Staffona Privacy Policy — how we collect, use and protect your personal data.">
-<link rel="canonical" href="https://www.staffona.com/privacy.html">
+<link rel="canonical" href="https://www.staffona.com/privacy">
 <link rel="icon" type="image/png" href="Favicon.png">
 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700;800&family=DM+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
