--- a/recruitment-egypt.html
+++ b/recruitment-egypt.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>Recruitment Consultancy Egypt — Find Top Egyptian Talent | Staffona</title>
 <meta name="description" content="Staffona's recruitment consultancy in Egypt. We source, screen and place top Egyptian talent across tech, finance, operations and bilingual support. 90-day guarantee.">
-<link rel="canonical" href="https://www.staffona.com/recruitment-egypt.html">
+<link rel="canonical" href="https://www.staffona.com/recruitment-egypt">
 <link rel="icon" type="image/png" href="Favicon.png">
 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700;800&family=DM+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
