--- a/resources.html
+++ b/resources.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>Egypt HR &amp; Hiring Resources Hub — Free Guides &amp; Law Downloads | Staffona</title>
 <meta name="description" content="Free Egypt HR guides, labor law explainers, payroll tax breakdowns, and hiring checklists. Written by Staffona's Alexandria-based HR specialists.">
-<link rel="canonical" href="https://www.staffona.com/resources.html">
+<link rel="canonical" href="https://www.staffona.com/resources">
 <link rel="icon" type="image/png" href="Favicon.png">
 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700;800&family=DM+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
