--- a/terms.html
+++ b/terms.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8"><meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title>Terms of Service | Staffona</title>
 <meta name="description" content="Staffona Terms of Service — the terms governing use of our website and services.">
-<link rel="canonical" href="https://www.staffona.com/terms.html">
+<link rel="canonical" href="https://www.staffona.com/terms">
 <link rel="icon" type="image/png" href="Favicon.png">
 <link rel="preconnect" href="https://fonts.googleapis.com"><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600;700;800&family=DM+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
